# WORK-PROOF

./: .gitignore  DOCUMENTATION.md  INSTALLATION.md  LICENSE  README.md  build_linux.sh  build_win_exe.ps1  pyproject.toml  requirements.txt  run_smoke_test.py  schema.sql
assets/templates/: client_report.html.j2  report.html.jinja2
dev_data/: sample_logs.jsonl
docs/: autostart.md  installation.md  packaging.md  privacy.md  usage.md
docs/linux/: workproof.desktop
examples/: README.md  generate_today_report.py  import_jsonl.py  load_sample_data.py
reports/: today.json
src/workproof/: analytics.py  app_ui.py  autostart_win.py  backup.py  charts_builder.py  config.py  dashboard.py  dashboard_ui.py  database.py  file_watcher.py  gui.py  main.py  proofs.py  report_generator.py  reports.py  sessions.py  summarizer.py  supervisor.py  tracker.py
src/workproof/utils/: logging_setup.py  platform_adapters.py
tests/: integration_test.py  test_dashboard_sessions.py  test_database.py  test_summarizer.py
