[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "workproof"
version = "0.1.0"
description = "Local-first desktop activity tracker and report generator"
authors = [{name = "WorkProof"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]


